# CppBootCamp

./: .gitignore  README.md  testBits  testBits.cpp
Day01/Bonus/: bonus  bonus.cpp  bonus_random  bonus_random.cpp
Day02/: Makefile
Day02/Array/: assignment1.cpp
Day02/LinkedList/: LinkedList
Day04/CarShop/: Shop.h  assignment1.cpp
Day05/Shape/: Makefile  Shape.cpp  Shape.hpp  main  main.cpp
Day08/: .Conv.sh.swp  Conv.sh  volvo.html
Day1/: assignment1.cpp  assignment2.cpp  bonus  test  test.cpp
Day1/Assignment1/: assignment1
Day1/Assignment2/: assignment2  bonus.cpp
Day10/: 1  1 copy.cpp  1.cpp  demo  demo.cpp
Day13/: Makefile  Shape  Shape.cpp  assignment1  assignment1.cpp  assignment2  assignment2.cpp  assignment3  assignment3.cpp
Day14/: 1  2  assignment1  assignment1.cpp  assignment2  assignment2.cpp
Day18/: Makefile  main  main.cpp
Day2/: a  a2  ass2.cpp  assignment2.cpp  h  hello.cpp  m  mystruct.cpp
Day2/Array/: assignment1  assignment1.cpp
Day4/: a  flow.drawio
Day8/: PullsNRun.sh
Temp/: arr.cpp  import.cpp  main  reallytest.cpp  solv  solv.cpp  t  test  test.cpp  text.txt
Trash/: threads.cpp
mini-project/: CMakeLists.txt  Makefile  Printer.cpp  Printer.h  Solver.cpp  Solver.h  Varibles.h  main  main.cpp  test  test.cpp
mini-project/data/input/: marie.txt  random.txt
mini-project/include/: Printer.h  Solver.h  Varibles.h  puzzle.h  variables.h  varibles.h
mini-project/input/: evil.txt  sudoko.txt
mini-project/src/: Printer.cpp  Solver.cpp  Varibles.cpp  importer.cpp  main.cpp  puzzle.cpp  varibles.cpp
(+9 files in other folders)
